--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>staff management</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+
+<div>
+  <button>
+    
+  </button>
+</div>
+
+    </div>
     <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
